# kryptonai

./: .gitignore  README.md  convert_dataset.js  deploy.sh  docker-compose.yml  nginx.conf  split_kb.js  split_kb_stream.js  start-docker-fixed.sh  start-docker.ps1  start-docker.sh  start.sh
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  db.rs  main.rs  models.rs  rag.rs  routes.rs
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  globals.css.backup  layout.tsx  loading.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/features/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/pricing/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/resources/: page.tsx
frontend/src/app/solutions/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/app/verify/: page.tsx
frontend/src/components/: Footer.tsx  Navbar.tsx  cards.tsx  cube.tsx  loading.tsx  solusioncard.tsx
frontend/src/lib/: api.ts
