[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
fastembed = "4"
ort = { version = "=2.0.0-rc.5", features = ["load-dynamic"] }
ort-sys = "=2.0.0-rc.5"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
pgvector = { version = "0.4", features = ["sqlx", "serde"] }
